# Splitter

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.app  Makefile  README.md  config.yaml  conftest.py  docker-compose.yaml  index.html  main.py  mkdocs.yml  objects.inv  output.docx  pyproject.toml  requirements.txt
chunker/docs/: index.html
data/test/: test_1.doc  test_1.docx  test_1.md  test_1.txt
data/test/input/: test_1.txt
docs/: index.md
docs/api/: docs.md
docs/chunker/: docs.md
docs/model/: docs.md
docs/reader/: docs.md
docs/splitter/: docs.md
path/to/data/: raft_state.json
reader/docs/: index.html
scripts/: build_docs.py  conftest.py  enrich_readme.py  validate_commit_msg.py  validate_test.sh
search/: search_index.json
site/: 404.html  objects.inv
site/api/docs/: index.html
site/chunker/docs/: index.html
site/model/docs/: index.html
site/reader/docs/: index.html
splitter/docs/: index.html
src/: __init__.py  config.yaml  main.py
src/application/: cli.py
src/application/api/: app.py  config.py  models.py
src/chunker/: chunk_manager.py
src/components/: read_manager.py  split_manager.py
src/domain/chunker/: __init__.py  chunk_manager.py
src/domain/reader/: __init__.py  base_reader.py  read_manager.py
src/domain/splitter/: __init__.py  split_manager.py
src/infrastructure/analyzer/: analyze_manager.py
src/infrastructure/converter/: base_converter.py  convert_manager.py
src/infrastructure/helpers/: __init__.py  config_loader.py
src/infrastructure/model/: llm_client.py
src/model/: base_client.py  llm_client.py
src/model/models/: azure_client.py  openai_client.py
src/reader/: base_reader.py  read_manager.py
src/reader/readers/: docling_reader.py  markitdown_reader.py  pdfplumber_reader.py
src/services/: base_splitter.py  fixed_splitter.py  paragraph_splitter.py  recursive_splitter.py  row_column_splitter.py  sentence_splitter.py  word_splitter.py
src/splitter/: base_splitter.py  split_manager.py
src/splitter/splitters/: __init__.py  fixed_splitter.py  paragraph_splitter.py  recursive_splitter.py  sentence_splitter.py  word_splitter.py
src/utils/: config.py  config_loader.py  file_reader.py  splitter.py
string/output/andres_herencia_TFM_TECI_pdf_20250317_001140_recursive/: andres_herencia_TFM_TECI_chunk_10.md  andres_herencia_TFM_TECI_chunk_102.md  andres_herencia_TFM_TECI_chunk_103.md  andres_herencia_TFM_TECI_chunk_104.md  andres_herencia_TFM_TECI_chunk_106.md  andres_herencia_TFM_TECI_chunk_111.md  andres_herencia_TFM_TECI_chunk_112.md  andres_herencia_TFM_TECI_chunk_114.md  andres_herencia_TFM_TECI_chunk_116.md  andres_herencia_TFM_TECI_chunk_119.md  andres_herencia_TFM_TECI_chunk_122.md  andres_herencia_TFM_TECI_chunk_124.md  andres_herencia_TFM_TECI_chunk_126.md  (+150 more)
test/: conftest.py
test/chunker/: test_chunk_manager.py
test/components/: test_read_manager.py
test/model/: test_llm_client.py
test/reader/: test_read_manager.py
test/services/: test_fixed_splitter.py  test_paragraph_splitter.py  test_recursive_splitter.py  test_sentence_splitter.py  test_word_splitter.py
(+276 files in other folders)
